Página de escolas. Provider de escolas, rodas coom lazy loading.

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -27,6 +27,9 @@
     }
   </script>-->
 
+  <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+
+
   <link href="build/main.css" rel="stylesheet">
 
 </head>
