Formulário de aluno (WIP)

--- a/frontend/src/pages/escolas/escolas.html
+++ b/frontend/src/pages/escolas/escolas.html
@@ -8,6 +8,11 @@
 <!-- Conteúdo -->
 <ion-content padding>
 
+  <!-- <ion-item lines="full">
+    <ion-label>CEP</ion-label>
+    <ion-input type="text" ></ion-input>
+  </ion-item> -->
+
   <!-- campo busca -->
   <ion-searchbar
     [(ngModel)]="textoBusca"
